--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 This project is seriously awesome, you guys and gals.
+
+This project will help Treehouse students learn about working with Git repositories.
